# exposure-render.ercore

./: .gitignore
Distribute/PackageScript/python36/: setup.py
Distribute/PackageScript/python37/: README.md  __init__.py  setup.py
Scripts/: build_py36.sh  package_py36.sh  package_py37.sh
Source/: CMakeLists.txt  blendrgbauc.cuh  boundingbox.h  buffer.h  buffer1d.h  camera.h  core.cu  cudatexture1d.h  cudatexture2d.h  cudatexture3d.h  defines.h  hostobject.h  hosttracer.h  intersection.h  lightsample.h  list.cuh  log.h  metrosample.h  octree.h  piecewisefunction.h  randomseedbuffer.h  randomseedbuffers.h  render.cuh  samplecamera.cuh  samplelight.cuh  sampleshader.cuh  statistic.h  statistics.h  surfacesample.h  texture.h  textures.h  transferfunction.h  utilities.h  volume.h  vtkErAlignment.cpp  vtkErAlignment.h  vtkErBindable.h  vtkErBitmap.cpp  vtkErBitmap.h  vtkErCamera.h  (+18 more)
Source/CMake/: rxSwigAddLibraryDependencies.cmake  rxSwigPrepareFiles.cmake
Source/Modules/: CMakeLists.txt
Source/Modules/ErCore/: CMakeLists.txt
Source/Modules/ErCore/API/: hosttexture.h  hostvolume.h
Source/Modules/ErCore/Buffer/: buffer.h  cudatexture.h
Source/Modules/ErCore/Color/: color.h  kelvin.h
Source/Modules/ErCore/Cuda/: dvr.cuh  estimate.cuh  gaussianfilterrgbauc.cuh  gaussianfilterxyzaf.cuh  intersect.cuh  tonemap.cuh  wrapper.cuh
Source/Modules/ErCore/Filter/: gaussian.h
Source/Modules/ErCore/General/: defines.h  exception.h  matrix.h  object.h  raymarching.h  statistic.h  statistics.h  tracer.h
Source/Modules/ErCore/Sample/: camerasample.h  lightingsample.h  shadersample.h
Source/Modules/ErCore/Shading/: shader.h
Source/Modules/ErCore/Shapes/: shape.h
Source/Modules/ErCore/TransferFunction/: piecewisefunction.h  transferfunction.h
Source/Modules/ErCore/Vector/: hysteresis.h  vec3f.h
Source/Modules/vtkEr/: CMakeLists.txt  vtkErAlignment.h  vtkErCamera.cpp  vtkErInterface.cpp  vtkErInterface.h  vtkErObject.h  vtkErShape.cpp  vtkErShape.h  vtkErTracer.h  vtkErVolume.cpp  vtkErVolume.h  vtkErVolumeProperty.h
Source/Testing/: CMakeLists.txt  main.cpp
Source/Wrapping/: CMakeLists.txt
Source/Wrapping/Common/: rx_swig_classes.i  rx_swig_common.i  rx_swig_cpp_include.i  rx_swig_std.i
Source/Wrapping/Python/: CMakeLists.txt  OffScreenFFR.i  testCommon.py
Source/Wrapping/Python/Packaging/: LICENSE  README.md  setup.py
